--- a/styles.css
+++ b/styles.css
@@ -2143,6 +2143,7 @@ h4 {
   text-transform: uppercase;
   margin-top: 10px;
   margin-bottom: 10px;
+  margin-left: 10px;
   font-size: 15px;
   font-weight: 400;
   line-height: 20px;
@@ -3159,6 +3160,10 @@ a {
 .section-2 {
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.section-3 {
+  display: flex;
 }
 
 @media screen and (max-width: 991px) {
